# geoalchemy-alembic-pydantic-fastapi-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
src/alembic/: env.py
src/alembic/versions/: 0249d898dac8_init_example_point.py
src/app/: crud.py  db.py  health.py  main.py  models.py  routes.py  schemas.py  settings.py
